<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * $Id: strings.xml 36 2012-07-07 23:54:43Z rmceoin@gmail.com $
 *
 * Copyright (C) 2008-2014 Randy McEoin
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

	<string name="app_name">CIDR Calculator</string>
	<string name="calculate">Calculate</string>
	<string name="reset">Reset</string>
	<string name="err_bad_ip">Bad IP format</string>
	<string name="err_ip_range">IP out of range</string>
	<string name="address_range">Address range</string>
	<string name="maximum_addresses">Maximum addresses</string>
	<string name="wildcard">Wildcard</string>
	<string name="about_dialog_ok">OK</string>
	<string name="about_dialog_message">CIDR Calculator\nRandy McEoin\nCopyright 2014\nVersion %s</string>
	<string name="about_dialog_title">About</string>
	<string name="history">History</string>
	<string name="preferences">Preferences</string>
	<string name="pref_title_history_entries">History Entries</string>
	<string name="pref_summary_history_entries">How many entries to keep in the history.</string>
	<string name="pref_dialog_title_history_entries">History Entries</string>
	<string name="pref_title_autocomplete">Auto Complete</string>
	<string name="pref_summary_autocomplete">Use the history to auto complete the IP address.</string>
	<string name="delete_all">Delete All</string>
	<string name="delete">Delete</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="dialog_delete_history_msg">Are you sure you want to delete all history?</string>
	<string name="converter">Converter</string>
	<string name="ip_decimal">IP Decimal</string>
	<string name="ip_binary">IP Binary</string>
	<string name="ip_hex">IP Hex</string>
	<string name="ip_binary_netmask">IP Binary Netmask</string>
	<string name="convert_to_binaryhex">Convert to Binary/Hex</string>
	<string name="convert_to_decimalhex">Convert to Decimal/Hex</string>
	<string name="convert_to_decimalbinary">Convert to Decimal/Binary</string>
	<string name="put_ip_here">Put IP here</string>
	<string name="return_ip">Return IP</string>
	<string name="ip_address">IPv4 Address</string>
	<string name="ipv6_address">IPv6 Address</string>
	<string name="ipv6">IPv6</string>
	<string name="info">Info</string>
	<string name="any_local">AnyLocal</string>
	<string name="link_local">LinkLocal</string>
	<string name="loopback">Loopback</string>
	<string name="mcglobal">Multicast Global</string>
	<string name="mclink_local">Multicast LinkLocal</string>
	<string name="mcnode_local">Multicast NodeLocal</string>
	<string name="mcorg_local">Multicast OrgLocal</string>
	<string name="mcsite_local">Multicast SiteLocal</string>
	<string name="multicast">Multicast</string>
	<string name="allnodes">All nodes</string>
	<string name="allrouters">All routers</string>
	<string name="allriprouters">All RIP routers</string>
	<string name="allntpservers">All NTP servers</string>
	<string name="alldhcpservers">All DHCP servers</string>
	
	<string name="mappedipv4">Mapped IPv4</string>
	
	<string name="pref_title_input_keyboard" tools:ignore="MissingTranslation">Input Keyboard</string>
	<string name="pref_summary_input_keyboard">Type of keyboard to use for input.</string>
	<string name="pref_dialog_title_input_keyboard">Input Keyboard</string>
    <string name="binary_all_zeros" translatable="false">00000000.00000000.00000000.00000000</string>
    <string name="slash" translatable="false">/</string>
    <string name="custom_hex">Custom Hex</string>
    <string name="number">Number</string>
    <string name="text">Text</string>
    <string name="pref_title_notification">Notification</string>
    <string name="pref_summary_notification">Create a notification for the calculation.</string>
</resources>
