<?xml version="1.0" encoding="utf-8"?><!--
 *
 * Copyright (C) 2008-2014 Randy McEoin
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_outer_layout"
    tools:context=".CIDRCalculator">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_ipaddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ip_address" />

            <AutoCompleteTextView
                android:id="@+id/ipaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_ipaddress"
                android:completionThreshold="5"
                android:digits="0123456789."
                android:ems="9"
                android:hint="@string/put_ip_here"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="15"
                android:scrollHorizontally="true"
                android:singleLine="true" />

            <Spinner
                android:id="@+id/bitlength"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/ipaddress"
                android:layout_toRightOf="@id/ipaddress" />

            <Spinner
                android:id="@+id/subnetmask"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ipaddress" />

            <Button
                android:id="@+id/calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subnetmask"
                android:text="@string/calculate" />

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/calculate"
                android:layout_toRightOf="@id/calculate"
                android:text="@string/reset" />

            <TextView
                android:id="@+id/label_address_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/calculate"
                android:text="@string/address_range" />

            <TextView
                android:id="@+id/address_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_address_range"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/label_maximum_addresses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_range"
                android:text="@string/maximum_addresses" />

            <TextView
                android:id="@+id/maximum_addresses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_maximum_addresses"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/label_wildcard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/maximum_addresses"
                android:text="@string/wildcard" />

            <TextView
                android:id="@+id/wildcard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_wildcard"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/label_ip_binary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wildcard"
                android:text="@string/ip_binary" />

            <TextView
                android:id="@+id/ip_binary_network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_ip_binary"
                android:background="#602d00"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ip_binary_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_ip_binary"
                android:layout_toRightOf="@id/ip_binary_network"
                android:background="#0c003f"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/label_ip_binary_netmask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ip_binary_network"
                android:text="@string/ip_binary_netmask" />

            <TextView
                android:id="@+id/ip_binary_netmask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_ip_binary_netmask"
                android:textSize="16sp" />


        </RelativeLayout>


    </ScrollView>
    <!--

    <LinearLayout
        android:id="@+id/hexkeyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        />
    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboardview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone" />
        -->

</RelativeLayout>
